--- a/YuWaShop/Home/SubVC/Commodities/AddCommodities/YWHomeAddCommoditiesVC.xib
+++ b/YuWaShop/Home/SubVC/Commodities/AddCommodities/YWHomeAddCommoditiesVC.xib
@@ -30,7 +30,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKx-TK-6iA">
-                            <rect key="frame" x="20" y="74" width="280" height="25"/>
+                            <rect key="frame" x="50" y="74" width="250" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="nx1-8p-S56"/>
                             </constraints>
@@ -55,7 +55,7 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品介绍" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OEc-7I-Yek">
-                            <rect key="frame" x="20" y="145" width="280" height="25"/>
+                            <rect key="frame" x="50" y="145" width="250" height="25"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -70,7 +70,7 @@
                             <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品价格" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rDM-ax-l0W">
-                            <rect key="frame" x="20" y="226" width="280" height="25"/>
+                            <rect key="frame" x="50" y="226" width="250" height="25"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -143,7 +143,7 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="折后价格" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UBD-8c-dEp">
-                            <rect key="frame" x="20" y="297" width="280" height="18"/>
+                            <rect key="frame" x="50" y="297" width="250" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -177,29 +177,49 @@
                                 <action selector="submitBtnAction:" destination="-1" eventType="touchUpInside" id="Oqp-mf-77O"/>
                             </connections>
                         </button>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shopname" translatesAutoresizingMaskIntoConstraints="NO" id="Thr-5Z-Wu0">
+                            <rect key="frame" x="20" y="76.5" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="BFZ-7l-mnS"/>
+                                <constraint firstAttribute="width" constant="20" id="so0-ER-9ot"/>
+                            </constraints>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="intro" translatesAutoresizingMaskIntoConstraints="NO" id="oOd-Tl-Ft9">
+                            <rect key="frame" x="20" y="147.5" width="20" height="20"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="oldprice" translatesAutoresizingMaskIntoConstraints="NO" id="NE3-MX-pGS">
+                            <rect key="frame" x="20" y="228.5" width="20" height="20"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="price" translatesAutoresizingMaskIntoConstraints="NO" id="yWv-5D-3Oe">
+                            <rect key="frame" x="20" y="296" width="20" height="20"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="rDM-ax-l0W" firstAttribute="height" secondItem="hKx-TK-6iA" secondAttribute="height" id="0bJ-Ea-te3"/>
                         <constraint firstItem="Co8-bO-IhK" firstAttribute="leading" secondItem="LmG-oo-GGc" secondAttribute="leading" id="0y6-TY-o7I"/>
                         <constraint firstItem="2gN-mQ-6Zr" firstAttribute="top" secondItem="M5i-W8-aTy" secondAttribute="bottom" constant="75" id="1WU-OF-z8v"/>
+                        <constraint firstItem="NE3-MX-pGS" firstAttribute="leading" secondItem="oOd-Tl-Ft9" secondAttribute="leading" id="2ge-cW-Fpy"/>
                         <constraint firstItem="Co8-bO-IhK" firstAttribute="trailing" secondItem="LmG-oo-GGc" secondAttribute="trailing" id="32W-Uf-sRL"/>
                         <constraint firstItem="irY-ot-6oW" firstAttribute="height" secondItem="hKx-TK-6iA" secondAttribute="height" id="4Rj-gZ-l90"/>
-                        <constraint firstItem="tPM-Jb-nly" firstAttribute="leading" secondItem="hKx-TK-6iA" secondAttribute="leading" id="5Gr-Fe-UIn"/>
                         <constraint firstItem="kNZ-Y4-Ve7" firstAttribute="leading" secondItem="irY-ot-6oW" secondAttribute="leading" id="6N4-Ez-jsW"/>
                         <constraint firstItem="2gN-mQ-6Zr" firstAttribute="trailing" secondItem="LmG-oo-GGc" secondAttribute="trailing" id="6hC-cy-EjY"/>
+                        <constraint firstItem="rDM-ax-l0W" firstAttribute="centerY" secondItem="NE3-MX-pGS" secondAttribute="centerY" id="6rm-vZ-FML"/>
+                        <constraint firstItem="NE3-MX-pGS" firstAttribute="width" secondItem="Thr-5Z-Wu0" secondAttribute="width" id="8GQ-4J-AsO"/>
+                        <constraint firstItem="hKx-TK-6iA" firstAttribute="leading" secondItem="Thr-5Z-Wu0" secondAttribute="trailing" constant="10" id="8W0-Hi-k2L"/>
                         <constraint firstItem="M5i-W8-aTy" firstAttribute="top" secondItem="LmG-oo-GGc" secondAttribute="bottom" constant="75" id="8av-Ja-6ZT"/>
-                        <constraint firstItem="irY-ot-6oW" firstAttribute="leading" secondItem="hKx-TK-6iA" secondAttribute="leading" id="9Un-dW-QQm"/>
+                        <constraint firstItem="oOd-Tl-Ft9" firstAttribute="leading" secondItem="Thr-5Z-Wu0" secondAttribute="leading" id="8uq-Nn-wWF"/>
+                        <constraint firstItem="tZm-cG-bWj" firstAttribute="leading" secondItem="Thr-5Z-Wu0" secondAttribute="leading" id="9Jx-u2-LQy"/>
                         <constraint firstItem="kNZ-Y4-Ve7" firstAttribute="top" secondItem="irY-ot-6oW" secondAttribute="bottom" constant="10" id="AAt-im-AMa"/>
                         <constraint firstItem="rUP-or-TEi" firstAttribute="top" secondItem="rDM-ax-l0W" secondAttribute="bottom" constant="5" id="AWd-WE-Qtu"/>
                         <constraint firstItem="M5i-W8-aTy" firstAttribute="leading" secondItem="LmG-oo-GGc" secondAttribute="leading" id="AcL-kC-BPC"/>
-                        <constraint firstItem="rUP-or-TEi" firstAttribute="leading" secondItem="rDM-ax-l0W" secondAttribute="leading" id="B8j-Xi-UQ3"/>
                         <constraint firstItem="Co8-bO-IhK" firstAttribute="top" secondItem="2gN-mQ-6Zr" secondAttribute="bottom" constant="75" id="BfC-CQ-Rwa"/>
                         <constraint firstItem="rDM-ax-l0W" firstAttribute="trailing" secondItem="hKx-TK-6iA" secondAttribute="trailing" id="Dad-RE-mxf"/>
                         <constraint firstAttribute="height" constant="520" id="ECj-99-PJa"/>
                         <constraint firstItem="OEc-7I-Yek" firstAttribute="height" secondItem="hKx-TK-6iA" secondAttribute="height" id="EjK-UJ-f5V"/>
-                        <constraint firstItem="hKx-TK-6iA" firstAttribute="leading" secondItem="gqm-W2-Diy" secondAttribute="leading" constant="20" id="FSe-KB-xaq"/>
+                        <constraint firstItem="yWv-5D-3Oe" firstAttribute="leading" secondItem="Thr-5Z-Wu0" secondAttribute="leading" id="FHN-NN-Jsx"/>
                         <constraint firstItem="rDM-ax-l0W" firstAttribute="top" secondItem="M5i-W8-aTy" secondAttribute="bottom" constant="10" id="FgV-Qh-weg"/>
+                        <constraint firstItem="Thr-5Z-Wu0" firstAttribute="leading" secondItem="gqm-W2-Diy" secondAttribute="leading" constant="20" id="H7o-0y-WUy"/>
                         <constraint firstItem="LmG-oo-GGc" firstAttribute="top" secondItem="upX-mN-st9" secondAttribute="bottom" constant="10" id="HRR-iW-pQr"/>
                         <constraint firstItem="UBD-8c-dEp" firstAttribute="leading" secondItem="rDM-ax-l0W" secondAttribute="leading" id="HhM-vv-cRW"/>
                         <constraint firstItem="GXU-mG-ZlY" firstAttribute="leading" secondItem="gqm-W2-Diy" secondAttribute="leading" constant="8" id="Lya-XG-Ipw"/>
@@ -207,34 +227,43 @@
                         <constraint firstAttribute="trailing" secondItem="GXU-mG-ZlY" secondAttribute="trailing" constant="8" id="NX2-bO-obO"/>
                         <constraint firstItem="upX-mN-st9" firstAttribute="top" secondItem="hKx-TK-6iA" secondAttribute="bottom" constant="5" id="O5b-d1-qnY"/>
                         <constraint firstItem="M5i-W8-aTy" firstAttribute="height" secondItem="LmG-oo-GGc" secondAttribute="height" id="Oq7-pU-ISS"/>
+                        <constraint firstItem="hKx-TK-6iA" firstAttribute="centerY" secondItem="Thr-5Z-Wu0" secondAttribute="centerY" id="QMR-xn-Yjz"/>
                         <constraint firstItem="rDM-ax-l0W" firstAttribute="leading" secondItem="hKx-TK-6iA" secondAttribute="leading" id="Qpe-dM-UgR"/>
                         <constraint firstItem="M5i-W8-aTy" firstAttribute="trailing" secondItem="LmG-oo-GGc" secondAttribute="trailing" id="Qr7-BM-tzt"/>
-                        <constraint firstItem="tZm-cG-bWj" firstAttribute="leading" secondItem="UBD-8c-dEp" secondAttribute="leading" id="T6g-BW-DO7"/>
                         <constraint firstItem="rUP-or-TEi" firstAttribute="trailing" secondItem="hKx-TK-6iA" secondAttribute="trailing" id="Ty4-h6-FZY"/>
+                        <constraint firstItem="tPM-Jb-nly" firstAttribute="leading" secondItem="Thr-5Z-Wu0" secondAttribute="leading" id="UQn-fM-UJk"/>
                         <constraint firstItem="tZm-cG-bWj" firstAttribute="top" secondItem="UBD-8c-dEp" secondAttribute="bottom" constant="5" id="V5d-Op-z7u"/>
+                        <constraint firstItem="rUP-or-TEi" firstAttribute="leading" secondItem="Thr-5Z-Wu0" secondAttribute="leading" id="VYr-vw-0kG"/>
                         <constraint firstItem="rUP-or-TEi" firstAttribute="height" secondItem="upX-mN-st9" secondAttribute="height" id="XX1-87-WVo"/>
                         <constraint firstItem="tPM-Jb-nly" firstAttribute="top" secondItem="OEc-7I-Yek" secondAttribute="bottom" constant="5" id="YKf-XH-Ftf"/>
                         <constraint firstItem="UBD-8c-dEp" firstAttribute="top" secondItem="2gN-mQ-6Zr" secondAttribute="bottom" constant="5" id="Yiy-KF-nZ4"/>
+                        <constraint firstItem="irY-ot-6oW" firstAttribute="leading" secondItem="yWv-5D-3Oe" secondAttribute="leading" id="Z17-g6-WFb"/>
+                        <constraint firstItem="OEc-7I-Yek" firstAttribute="centerY" secondItem="oOd-Tl-Ft9" secondAttribute="centerY" id="ZNa-VS-RBA"/>
                         <constraint firstItem="irY-ot-6oW" firstAttribute="top" secondItem="Co8-bO-IhK" secondAttribute="bottom" constant="10" id="a3D-1A-nP2"/>
                         <constraint firstItem="hKx-TK-6iA" firstAttribute="top" secondItem="gqm-W2-Diy" secondAttribute="top" constant="74" id="a9T-ZC-wng"/>
+                        <constraint firstItem="yWv-5D-3Oe" firstAttribute="height" secondItem="Thr-5Z-Wu0" secondAttribute="height" id="bax-SX-5gG"/>
                         <constraint firstItem="kNZ-Y4-Ve7" firstAttribute="centerX" secondItem="gqm-W2-Diy" secondAttribute="centerX" id="bpu-JQ-j9h"/>
+                        <constraint firstItem="yWv-5D-3Oe" firstAttribute="width" secondItem="Thr-5Z-Wu0" secondAttribute="width" id="cPr-Pm-u2C"/>
                         <constraint firstItem="OEc-7I-Yek" firstAttribute="trailing" secondItem="hKx-TK-6iA" secondAttribute="trailing" id="cp9-jN-q7v"/>
                         <constraint firstItem="UBD-8c-dEp" firstAttribute="trailing" secondItem="rDM-ax-l0W" secondAttribute="trailing" id="dTD-Am-7D9"/>
                         <constraint firstItem="irY-ot-6oW" firstAttribute="trailing" secondItem="hKx-TK-6iA" secondAttribute="trailing" id="drc-2d-oJl"/>
                         <constraint firstItem="tZm-cG-bWj" firstAttribute="trailing" secondItem="UBD-8c-dEp" secondAttribute="trailing" id="eWH-ba-lfG"/>
                         <constraint firstItem="rUP-or-TEi" firstAttribute="trailing" secondItem="rDM-ax-l0W" secondAttribute="trailing" id="eyC-pg-OBl"/>
                         <constraint firstItem="OEc-7I-Yek" firstAttribute="top" secondItem="LmG-oo-GGc" secondAttribute="bottom" constant="5" id="geu-JW-PnL"/>
-                        <constraint firstItem="rUP-or-TEi" firstAttribute="leading" secondItem="hKx-TK-6iA" secondAttribute="leading" id="hbq-kS-jtB"/>
+                        <constraint firstItem="NE3-MX-pGS" firstAttribute="height" secondItem="Thr-5Z-Wu0" secondAttribute="height" id="hLi-C2-UaV"/>
                         <constraint firstItem="OEc-7I-Yek" firstAttribute="leading" secondItem="hKx-TK-6iA" secondAttribute="leading" id="hqg-3X-8Ml"/>
                         <constraint firstItem="tPM-Jb-nly" firstAttribute="trailing" secondItem="hKx-TK-6iA" secondAttribute="trailing" id="iTc-wT-eN3"/>
                         <constraint firstItem="tPM-Jb-nly" firstAttribute="height" secondItem="upX-mN-st9" secondAttribute="height" id="jbx-Xg-7f4"/>
+                        <constraint firstItem="UBD-8c-dEp" firstAttribute="centerY" secondItem="yWv-5D-3Oe" secondAttribute="centerY" id="juH-g4-CEq"/>
                         <constraint firstAttribute="bottom" secondItem="GXU-mG-ZlY" secondAttribute="bottom" constant="8" id="ksU-KH-T2c"/>
                         <constraint firstItem="upX-mN-st9" firstAttribute="trailing" secondItem="hKx-TK-6iA" secondAttribute="trailing" id="lpf-Y8-dNm"/>
                         <constraint firstAttribute="trailing" secondItem="LmG-oo-GGc" secondAttribute="trailing" id="mpS-pp-c2B"/>
                         <constraint firstItem="2gN-mQ-6Zr" firstAttribute="leading" secondItem="LmG-oo-GGc" secondAttribute="leading" id="s01-0u-Uty"/>
+                        <constraint firstItem="oOd-Tl-Ft9" firstAttribute="height" secondItem="Thr-5Z-Wu0" secondAttribute="height" id="t5z-A4-8cf"/>
+                        <constraint firstItem="oOd-Tl-Ft9" firstAttribute="width" secondItem="Thr-5Z-Wu0" secondAttribute="width" id="u1p-5c-yP6"/>
                         <constraint firstAttribute="trailing" secondItem="hKx-TK-6iA" secondAttribute="trailing" constant="20" id="uat-C1-HUV"/>
-                        <constraint firstItem="upX-mN-st9" firstAttribute="leading" secondItem="hKx-TK-6iA" secondAttribute="leading" id="vBA-bJ-g26"/>
                         <constraint firstItem="2gN-mQ-6Zr" firstAttribute="height" secondItem="LmG-oo-GGc" secondAttribute="height" id="zjd-2x-cyZ"/>
+                        <constraint firstItem="upX-mN-st9" firstAttribute="leading" secondItem="Thr-5Z-Wu0" secondAttribute="leading" id="zpX-zS-9oS"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
@@ -255,5 +284,9 @@
     </objects>
     <resources>
         <image name="img_camera" width="50" height="50"/>
+        <image name="intro" width="17" height="17"/>
+        <image name="oldprice" width="17" height="17"/>
+        <image name="price" width="17" height="17"/>
+        <image name="shopname" width="17" height="17"/>
     </resources>
 </document>
